<resources>
    <string name="app_name" translatable="false">BadTracker</string>
    <string name="create_match">Create match</string>
    <string name="matches_map">Matches map</string>
    <string name="add_a_new_match">Add a new match</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="match" translatable="false">Match</string>
    <string name="open">Open</string>
    <string name="vs" translatable="false">VS</string>
    <string name="name">Name</string>
    <string name="required_location_permission">Location permission is required</string>
    <string name="permission_denied_explanation">Permission was denied but is required to display your location</string>
    <string name="take_picture">Take picture</string>
    <string name="create_image_file">Failed to create image file</string>
    <string name="local_matches">Local matches</string>
    <string name="team_2_players">Team 2 players</string>
    <string name="team_1_players">Team 1 players</string>
    <string name="create_player">Create player</string>
    <string name="sex">Sex</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="nationality">Nationality</string>
    <string name="create">Create</string>
    <string name="firstName">FirstName</string>
    <string name="score_team_2">Score team 2</string>
    <string name="score_team_1">Score team 1</string>
    <string name="create_set">Create set</string>
    <string name="failed_save_online_match">Failed to save this match online</string>
    <string name="create_new_match">Creating the new match…</string>
    <string name="information">Information</string>
    <string name="sets">Sets</string>
    <string name="settings">Settings</string>
    <string name="players">Players</string>
</resources>
